# FDedup

./: .gitignore  Cargo.toml  Licence  Nota_Moimeme.md  README.md  demo.sh  fdedup.def  pixi.toml
.cargo/: config.toml
benchmark/: benchmark.sh  plotit.py  start_bench.sh
rapport/: rapport.typ  works.bib
scripts/: create_genome.py  inject_dups.py
src/: check_hash.rs  cli.rs  hasher.rs  main.rs  processor.rs  utils.rs
tests/: cli.rs
