[package]
name = "fdedup"
version = "1.0.0"
edition = "2024"
authors = ["Raphaël Ribes", "Céline Mandier"]
description = "A fast and memory-efficient FASTX PCR deduplication tool"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.etu.umontpellier.fr/rapha-l-ribes-m2-internship/fdedup"
keywords = ["bioinformatics", "fastq", "dedup", "pcr"]
categories = ["science", "command-line-utilities"]

[dependencies]
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
flate2 = { version = "1.1.9", features = ["zlib-ng"], default-features = false }
rustc-hash = "2.1.1"
needletail = "0.6.3"
